// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`storage-settings-webhook-form Renders \`storage-settings-webhook-form\` with custom form and history 1`] = `
<div
  class="layout column"
>
  <div
    class="layout c-information-block column"
  >
    <div
      class="layout"
    >
      <div
        class="text-subtitle-1 font-weight-bold"
      >
      Webhooks
      </div>
      <!---->
    </div>
    <div
      class="layout mt-2"
    >
      <span
        class="text--secondary"
      >
        <storage-settings-history-message-stub
          history="1611250000"
        />
      </span>
    </div>
    <c-enabled-duration-field-stub
      hide-value-on-false=""
      label="Delete webhooks requests history"
      name="webhook.delete_after"
      suffix="After"
      switcher=""
      value="[object Object]"
    />
    <c-enabled-field-stub
      name="webhook.log_credentials"
      value="true"
    >
        Open auth data in logs
      <c-help-icon-stub
        color="info"
        icon-class="ml-2"
        text="Affects how passwords, tokens and auth data are written in logs. 
<ul><li>enabled: in open way (not recommended)</li><li>disabled: hidden with ***</li></ul>"
        top=""
      />
    </c-enabled-field-stub>
  </div>
</div>
`;

exports[`storage-settings-webhook-form Renders \`storage-settings-webhook-form\` with default form 1`] = `
<div
  class="layout column"
>
  <div
    class="layout c-information-block column"
  >
    <div
      class="layout"
    >
      <div
        class="text-subtitle-1 font-weight-bold"
      >
      Webhooks
      </div>
      <!---->
    </div>
    <!---->
    <c-enabled-duration-field-stub
      hide-value-on-false=""
      label="Delete webhooks requests history"
      name="webhook.delete_after"
      suffix="After"
      switcher=""
      value="[object Object]"
    />
    <c-enabled-field-stub
      name="webhook.log_credentials"
    >
        Open auth data in logs
      <c-help-icon-stub
        color="info"
        icon-class="ml-2"
        text="Affects how passwords, tokens and auth data are written in logs. 
<ul><li>enabled: in open way (not recommended)</li><li>disabled: hidden with ***</li></ul>"
        top=""
      />
    </c-enabled-field-stub>
  </div>
</div>
`;
